use local libs instead of cdn in industry templates

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -5,7 +5,7 @@
 
 {% block style %}
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css"/>
+          href="{% static 'libs/TempusDominusBootstrap4/5.0.0_alpha14/tempusdominus-bootstrap-4.min.css' %}"/>
 {% endblock %}
 
 {% block dialog %}
@@ -357,7 +357,7 @@
 {% endblock %}
 
 {% block script %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
+    <script src="{% static 'libs/FancyTree/2.30.2/fancytree-all-deps.min.js' %}"></script>
     {#    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>#}
     {#    <script src="{% static 'js/fa.js' %}"></script>#}
     {#    <script type="text/javascript"#}
@@ -381,9 +381,8 @@
     {#            //});#}
     {#        });#}
     {#    </script>#}
-    <script type="text/javascript" src="https://unpkg.com/persian-date@1.1.0/dist/persian-date.min.js"></script>
-    <script type="text/javascript"
-            src="https://unpkg.com/persian-datepicker@1.2.0/dist/js/persian-datepicker.min.js"></script>
+    <script type="text/javascript" src="{% static 'libs/PersianDate/1.1.0/persian-date.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/PersianDatepicker/1.2.0/persian-datepicker.min.js' %}"></script>
     <script type="text/javascript">
         $(function () {
             $('#ApplicationDeadline').pDatepicker({
