--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -369,6 +369,6 @@
     </a>
 {% endblock %}
 {% block script %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+    <script src="{% static 'libs/FancyTree/2.30.2/fancytree-all-deps.min.js' %}"></script>
+    <script src="{% static 'libs/Swiper/4.5.0/swiper.min.js' %}"></script>
 {% endblock %}
