--- a/researcher/templates/researcher/project.html
+++ b/researcher/templates/researcher/project.html
@@ -897,8 +897,7 @@
         //        numbersComma("{{ projectForm.predict_profit }}") + " ریال" +
         //        "</div></div>";
     </script>
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="{% static 'libs/OwlCarousel2/2.3.4/owl.carousel.min.js' %}"></script>
     <script type="text/javascript">
         $(".comments .fa-trash-alt").closest(".dropdown-item").click(function () {
             deleteComment($(this).closest('.my-comment'));
@@ -937,9 +936,8 @@
     {#            });#}
     {#        });#}
     {#    </script>#}
-    <script type="text/javascript" src="https://unpkg.com/persian-date@1.1.0/dist/persian-date.min.js"></script>
-    <script type="text/javascript"
-            src="https://unpkg.com/persian-datepicker@1.2.0/dist/js/persian-datepicker.min.js"></script>
+    <script type="text/javascript" src="{% static 'libs/PersianDate/1.1.0/persian-date.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'libs/PersianDatepicker/1.2.0/persian-datepicker.min.js' %}"></script>
     <script type="text/javascript">
         $(function () {
             $('#id_card_deadline').pDatepicker({
