--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -971,7 +971,7 @@
 {% endblock %}
 {% block script %}
     <script type="text/javascript" src="{% static 'researcher/js/persian-datepicker.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
+    <script src="{% static 'libs/FancyTree/2.30.2/fancytree-all-deps.min.js' %}"></script>
     <script type="text/javascript">
         $("#fancy-tree").fancytree({
             extensions: ["glyph"],
