--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -130,5 +130,5 @@
     </a>
 {% endblock %}
 {% block script %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
+    <script src="{% static 'libs/FancyTree/2.30.2/fancytree-all-deps.min.js' %}"></script>
 {% endblock %}
