--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -351,7 +351,6 @@
     </a>
 {% endblock %}
 {% block script %}
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="{% static 'libs/OwlCarousel2/2.3.4/owl.carousel.min.js' %}"></script>
     {#    <script src="{% static 'js/inputTags.jquery.min.js' %}" type="text/javascript"></script>#}
 {% endblock %}
