--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -484,8 +484,7 @@
         //        numbersComma("{{ projectForm.predict_profit }}") + " ریال" +
         //        "</div></div>";
     </script>
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="{% static 'libs/OwlCarousel2/2.3.4/owl.carousel.min.js' %}"></script>
     <script type="text/javascript">
         $(".comments .fa-trash-alt").closest(".dropdown-item").click(function () {
             deleteComment($(this).closest('.my-comment'));
