--- a/industry/templates/industry/layouts/base_layout.html
+++ b/industry/templates/industry/layouts/base_layout.html
@@ -208,7 +208,7 @@
     </div>
 </div>
 <script type="text/javascript" src="{% static 'libs/jQuery/3.5.1/jquery.min.js' %}"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="{% static 'libs/jQuery/UI/1.12.1/jquery-ui.min.js' %}"></script>
 <script src="{% static 'libs/Propper/1.14.7/popper.min.js' %}"></script>
 <script src="{% static 'libs/Bootstrap/4.5.0/bootstrap.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'libs/iziToast/1.4.0/iziToast.min.js' %}"></script>
