--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -512,20 +512,21 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="ct-checklist-item__detail">
-                                                                    {% spaceless %}
-                                                                        <div class="ct-checklist__text">
-                                                                            {% if task.done %}
-                                                                                <del>
-                                                                            {% endif %}
-                                                                            {% for tag in task.involved_user %}
-                                                                                <span class="atMention me">@{{ tag }}</span>
-                                                                            {% endfor %}
-                                                                            {{ task.description }}
-                                                                            {% if task.done %}
-                                                                                </del>
-                                                                            {% endif %}
-                                                                        </div>
-                                                                    {% endspaceless %}
+                                                                    <div class="ct-checklist__text">
+                                                                        {% if task.done %}
+                                                                            <del>
+                                                                        {% endif %}
+                                                                        {% for tag in task.involved_user %}
+                                                                            <span class="atMention me">@{{ tag }}</span>
+                                                                        {% endfor %}
+                                                                        {{ task.description }}
+                                                                        {% if task.done %}
+                                                                            </del>
+                                                                        {% endif %}
+                                                                    </div>
+                                                                    <div class="ct-checklist__pre d-none">
+                                                                        <pre contenteditable="true">{{ task.description }}</pre>
+                                                                    </div>
                                                                     <div class="ct-checklist-item__control d-flex">
                                                                         <div class="ct-checklist-item-due">
                                                                             <button>
@@ -563,6 +564,80 @@
                                                                                     <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"></path>
                                                                                     <path fill-rule="evenodd"
                                                                                           d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"></path>
+                                                                                </svg>
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="ct-checklist-item__footer d-none">
+                                                                        <div class="float-left mt-1">
+                                                                            <div class="ct-task-option d-flex">
+                                                                                <div class="ct-task-due ct-option-btn">
+                                                                                    <button class="edit_task_due"
+                                                                                            type="button" style="padding: 6px 10px;"
+                                                                                            dir="ltr">
+                                                                                        <svg width="1em" height="1em"
+                                                                                             viewBox="0 0 16 16"
+                                                                                             class="bi bi-clock"
+                                                                                             fill="currentColor"
+                                                                                             xmlns="http://www.w3.org/2000/svg">
+                                                                                            <path fill-rule="evenodd"
+                                                                                                  d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"></path>
+                                                                                            <path fill-rule="evenodd"
+                                                                                                  d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"></path>
+                                                                                        </svg>
+                                                                                    </button>
+                                                                                </div>
+                                                                                <div class="ct-task-assignee ct-option-btn">
+                                                                                    <div class="dropdown">
+                                                                                        <button class="btn btn-secondary dropdown-toggle ct-option-btn dropdownAssignment"
+                                                                                                type="button"
+                                                                                                data-toggle="dropdown"
+                                                                                                aria-haspopup="true"
+                                                                                                aria-expanded="false"
+                                                                                                style="padding: 4px 9px;">
+                                                                                            <svg width="1em"
+                                                                                                 height="1em"
+                                                                                                 viewBox="0 0 16 16"
+                                                                                                 class="bi bi-person-plus"
+                                                                                                 fill="currentColor"
+                                                                                                 xmlns="http://www.w3.org/2000/svg">
+                                                                                                <path fill-rule="evenodd"
+                                                                                                      d="M8 5a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm6 5c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10zM13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"></path>
+                                                                                            </svg>
+                                                                                        </button>
+                                                                                        <div class="dropdown-menu text-right"
+                                                                                             aria-labelledby="dropdownAssignment">
+                                                                                            ${dropdown_list}
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </div>
+                                                                                <div class="ct-task-delete ct-option-btn d-none">
+                                                                                    <button>
+                                                                                        <svg width="1em" height="1em"
+                                                                                             viewBox="0 0 16 16"
+                                                                                             class="bi bi-trash"
+                                                                                             fill="currentColor"
+                                                                                             xmlns="http://www.w3.org/2000/svg">
+                                                                                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"></path>
+                                                                                            <path fill-rule="evenodd"
+                                                                                                  d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"></path>
+                                                                                        </svg>
+                                                                                    </button>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="">
+                                                                            <button class="save-change btn btn-primary btn-sm" data-id="{{ task.id }}">
+                                                                                ذخیره
+                                                                            </button>
+                                                                            <button class="cancel-change btn btn-link text-dark btn-sm">
+                                                                                <svg width="2em" height="2em"
+                                                                                     viewBox="0 0 16 16" class="bi bi-x"
+                                                                                     fill="currentColor"
+                                                                                     xmlns="http://www.w3.org/2000/svg">
+                                                                                    <path fill-rule="evenodd"
+                                                                                          d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z">
+                                                                                    </path>
                                                                                 </svg>
                                                                             </button>
                                                                         </div>
