--- a/industry/templates/industry/preview_project.html
+++ b/industry/templates/industry/preview_project.html
@@ -496,6 +496,7 @@
                                                                         <input type="checkbox"
                                                                                class="form-check-input inp-cbx"
                                                                                id="checkList#{{ task.id }}"
+                                                                               data-value="{{ task.id }}"
                                                                                name="requestResearcher" value=1 hidden
                                                                                {% if task.done %}checked{% endif %}>
                                                                         <label class="form-check-label cbx mb-0"
@@ -554,7 +555,7 @@
                                                                                 </svg>
                                                                             </button>
                                                                         </div>
-                                                                        <div class="ct-checklist-item-delete">
+                                                                        <div class="ct-checklist-item-delete" data-value="{{ task.id }}">
                                                                             <button>
                                                                                 <svg width="1em" height="1em"
                                                                                      viewBox="0 0 16 16"
@@ -573,7 +574,8 @@
                                                                             <div class="ct-task-option d-flex">
                                                                                 <div class="ct-task-due ct-option-btn">
                                                                                     <button class="edit_task_due"
-                                                                                            type="button" style="padding: 6px 10px;"
+                                                                                            type="button"
+                                                                                            style="padding: 6px 10px;"
                                                                                             dir="ltr">
                                                                                         <svg width="1em" height="1em"
                                                                                              viewBox="0 0 16 16"
@@ -607,7 +609,64 @@
                                                                                         </button>
                                                                                         <div class="dropdown-menu text-right"
                                                                                              aria-labelledby="dropdownAssignment">
-                                                                                            ${dropdown_list}
+                                                                                            <h6 class="dropdown-header">
+                                                                                                رئیس پروژه
+                                                                                            </h6>
+                                                                                            <div class="dropdown-item d-flex {% if project.involved_user.industryUser.username in task.involved_user %}selected{% endif %}"
+                                                                                                 type="button"
+                                                                                                 data-value="{{ project.involved_user.industryUser.username }}">
+                                                                                                <img src="{{ project.involved_user.industryUser.photo }}"
+                                                                                                     width="32px"
+                                                                                                     class="ml-1"
+                                                                                                     alt="{{ project.involved_user.industryUser.fullname }}">
+                                                                                                <div class="mt-auto mb-auto">
+                                                                                                    {{ project.involved_user.industryUser.fullname }}
+                                                                                                    <span> ({{ project.involved_user.industryUser.username }}@) </span>
+                                                                                                </div>
+                                                                                            </div>
+                                                                                            <h6 class="dropdown-header">
+                                                                                                استاد</h6>
+                                                                                            {% for user in project.involved_user.expertUsers %}
+                                                                                                <div class="dropdown-item d-flex"
+                                                                                                     type="button"
+                                                                                                     data-value="{{ user.username }}">
+                                                                                                    {% if user.photo %}
+                                                                                                        <img src="{{ user.photo }}"
+                                                                                                             alt="{{ user.fullname }}"
+                                                                                                             width="32px"
+                                                                                                             class="ml-1">
+                                                                                                    {% else %}
+                                                                                                        <img src="{% static 'industry/img/profile.jpg' %}"
+                                                                                                             alt="{{ user.fullname }} "
+                                                                                                             width="32px"
+                                                                                                             class="ml-1">
+                                                                                                    {% endif %}
+                                                                                                    <div class="mt-auto mb-auto">{{ user.fullname }}<span> ({{ user.username }}@) </span>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            {% endfor %}
+                                                                                            <h6 class="dropdown-header">
+                                                                                                پژوهشگر
+                                                                                            </h6>
+                                                                                            {% for user in project.involved_user.researcherUsers %}
+                                                                                                <div class="dropdown-item d-flex"
+                                                                                                     type="button"
+                                                                                                     data-value="{{ user.username }}">
+                                                                                                    {% if user.photo %}
+                                                                                                        <img src="{{ user.photo }}"
+                                                                                                             alt="{{ user.fullname }}"
+                                                                                                             width="32px"
+                                                                                                             class="ml-1">
+                                                                                                    {% else %}
+                                                                                                        <img src="{% static 'industry/img/profile.jpg' %}"
+                                                                                                             alt="{{ user.fullname }} "
+                                                                                                             width="32px"
+                                                                                                             class="ml-1">
+                                                                                                    {% endif %}
+                                                                                                    <div class="mt-auto mb-auto">{{ user.fullname }}<span> ({{ user.username }}@) </span>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            {% endfor %}
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -627,7 +686,8 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="">
-                                                                            <button class="save-change btn btn-primary btn-sm" data-id="{{ task.id }}">
+                                                                            <button class="save-change btn btn-primary btn-sm"
+                                                                                    data-id="{{ task.id }}">
                                                                                 ذخیره
                                                                             </button>
                                                                             <button class="cancel-change btn btn-link text-dark btn-sm">
